--- a/package.json
+++ b/package.json
@@ -26,9 +26,7 @@
     "fs-extra": "^5.0.0",
     "graphql": "^14.0.0",
     "inquirer": "^3.3.0",
+    "minimist": "^1.2.0",
     "ora": "^1.3.0"
-  },
-  "devDependencies": {
-    "standard": "^10.0.3"
   }
 }
